Fixed hall ranking on mobile and added findMealmate css

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -130,7 +130,7 @@
      overflow-x: hidden !important;
 }
  #home-header {
-     top: 38%;
+     top: 40%;
      transform: translateY(-40%);
      position: absolute;
 }
@@ -355,13 +355,9 @@
 }
 
  ol li {
-     border: solid !important;
-     border-radius: 5px !important;
-     margin-bottom: 2% !important;
-     margin-top: 2% !important;
-     min-width: 150px;
-     max-width: 300px;
-     padding: 0 !important;
+     border: solid;
+     border-radius: 5px;
+     margin-bottom: 2%;
 }
 
  body {
